[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://FATJUMPINGBOSS.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemies/shadow.png" type="Texture" id=3]

[sub_resource type="Curve" id=8]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.323529, -185.455 ), -2967.27, 0.0, 0, 0 ]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.990196, 0 ), -2.61322, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 1008.14

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31, 32 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Polygon2D:color:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Polygon2D:color:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Polygon2D:color:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Polygon2D:color:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0.137255, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Polygon2D:scale:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0.611282, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Polygon2D:scale:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0.584221, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Area2D - Damage/CollisionShape2D:scale:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Area2D - Damage/CollisionShape2D:scale:y")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "value"
tracks/13/path = NodePath("Area2D - Damage/CollisionShape2D:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("CollisionShape2D:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Polygon2D:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -2000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 0.8 )
}

[sub_resource type="Animation" id=6]
resource_name = "land"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -2000, -0.25, 0, 0.25, 0, 0, 0, -276.031, 0, 0.543418 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.4, -0.25, 0, 0.25, 0, 4, -0.3, 0.0674448, 0.2, 5.41245, 1, -0.25, 0, 0.2, 2.05171, 1, -0.2, -0.933936, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.6, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Polygon2D:color:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Polygon2D:color:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Polygon2D:color:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Polygon2D:color:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0.05, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Polygon2D:scale:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.3, 0.992385, 0.5, -0.1, 0.58825, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Polygon2D:scale:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.4, 1.14889, 0.6, -0.1, 0.0187371, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Area2D - Damage/CollisionShape2D:scale:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 4, -0.4, -0.339382, 0.4, -0.177119, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 1 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Area2D - Damage/CollisionShape2D:scale:y")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.3, -0.140539, 4, -0.4, -0.501646, 0.5, -0.717997, 1, -0.3, 0.0209666, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 0.7, 1 )
}
tracks/13/type = "value"
tracks/13/path = NodePath("Area2D - Damage/CollisionShape2D:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("CollisionShape2D:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Polygon2D:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="FATJUMPINGBOSS" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 150, -150 )

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="."]
position = Vector2( -150, -150 )

[node name="VisibilityNotifier2D3" type="VisibilityNotifier2D" parent="."]
position = Vector2( 150, 150 )

[node name="VisibilityNotifier2D4" type="VisibilityNotifier2D" parent="."]
position = Vector2( -150, 150 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 3.0
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 35.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.57
angular_velocity_random = 1.0
linear_accel_random = 1.0
linear_accel_curve = SubResource( 8 )
radial_accel = 100.0
radial_accel_random = 1.0
damping = 18.35
damping_random = 1.0
angle = 720.0
angle_random = 1.0
scale_amount = 50.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 7 )
color = Color( 0.505035, 0.519138, 0.523438, 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2( -5.76, 0.204736 )
scale = Vector2( 0.611282, 0.584221 )
color = Color( 0, 0, 0, 0.137255 )
antialiased = true
texture = ExtResource( 3 )
texture_offset = Vector2( 48, 58 )
texture_scale = Vector2( 1.1, 1.1 )
polygon = PoolVector2Array( -0.392617, -53.4125, -15, -50, -23.2953, -44.8541, -33.1107, -31.1607, -38.0185, -14.0439, -38.0185, -0.350443, -38.0185, 15.0547, -36.3826, 28.7481, -33.1107, 40.7299, -24.9312, 45.8649, -15.1158, 49.2883, -2.02852, 51, 9.42282, 51, 27.4178, 51, 38.8691, 47.5766, 48.6846, 42.4416, 53.5923, 32.1715, 56.8641, 18.478, 58.5, -0.350443, 58.5, -14.0439, 55.2282, -27.7373, 51.9564, -38.0074, 43.7768, -44.8541, 33.9614, -49.9892, 19.2383, -53.4125, 9.42282, -53.4125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D - Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Detection"]
shape = SubResource( 2 )

[node name="Area2D - Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Damage"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/land = SubResource( 6 )

[node name="StateTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="VisibilityNotifierDeath" type="VisibilityNotifier2D" parent="."]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D2_viewport_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D3" to="." method="_on_VisibilityNotifier2D3_viewport_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D4" to="." method="_on_VisibilityNotifier2D4_viewport_exited"]
[connection signal="body_entered" from="Area2D - Detection" to="." method="_on_Area2D__Detection_body_entered"]
[connection signal="body_entered" from="Area2D - Damage" to="." method="_on_Area2D__Damage_body_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifierDeath" to="." method="_on_VisibilityNotifierDeath_screen_exited"]
